test/libsolidity/syntaxTests/parsing/constructor_payable_payable.sol
contract C {
  constructor() payable payable {}
}
// ----
// ParserError 9680: (37-44): State mutability already specified as "payable".
